--- a/templates/login.html
+++ b/templates/login.html
@@ -9,7 +9,11 @@
 </head>
 <body>
     
-    <span>bau</span>    
+    <div class="page">
+        <form class="form-login">
+            
+        </form>
+    </div>
 
 </body>
 </html>
