--- a/templates/login.html
+++ b/templates/login.html
@@ -4,14 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="static/home.css">
+    <link rel="stylesheet" type="text/css" href="static/login.css">
     <title>Document</title>
 </head>
 <body>
     
-    <div class="page">
+    <div class="login-page">
         <form class="form-login">
+
             
+        
+            <div class="div-input-field">
+                <input class="input-field" type="" name="" placeholder="Username">
+            </div>
+
+            <div class="div-input-field">
+                <input class="input-field" type="" name="" placeholder="Password">
+            
+        </div>
         </form>
     </div>
 
