--- a/templates/login.html
+++ b/templates/login.html
@@ -10,9 +10,9 @@
 <body>
     
     <div class="login-page">
-        <form class="form-login">
+        <form class="login-form">
 
-            
+            <span class="login-text"> Log In</span>
         
             <div class="div-input-field">
                 <input class="input-field" type="" name="" placeholder="Username">
