--- a/templates/login.html
+++ b/templates/login.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="static/login.css">
-    <title>Document</title>
+    <title>Login</title>
 </head>
 <body>
     
@@ -20,8 +20,11 @@
 
             <div class="div-input-field">
                 <input class="input-field" type="" name="" placeholder="Password">
+
             
         </div>
+
+            <div class="no-account-text">Non possiedi un account? <a href="/signup">Clicca qui</a></div>
         </form>
     </div>
 
