login ora funzionante ma devo trovare un modo per nascondere i dati di accesso quando inviati

--- a/templates/login.html
+++ b/templates/login.html
@@ -10,7 +10,7 @@
 <body>
     
     <div class="login-page">
-        <form class="login-form">
+        <form class="login-form" method="post">
 
             <span class="login-text"> Log In</span>
         
