--- a/templates/home.html
+++ b/templates/home.html
@@ -9,7 +9,11 @@
 </head>
 <body>
     
-    <a href="/logout"></a>    
+    <div class="home-page">
+        <div>
+            
+        </div>
+    </div>    
 
 </body>
 </html>
