--- a/templates/signup.html
+++ b/templates/signup.html
@@ -15,16 +15,16 @@
             <span class="signup-text"> Sign up</span>
 
             <div class="div-input-field">
-                <input class="input-field" type="nome" name="nome" placeholder="Nome">
+                <input class="input-field" type="nome" name="nome" placeholder="Nome" required>
             </div>
 
             <div class="div-input-field">
-                <input class="input-field" type="cognome" name="cognome" placeholder="Cognome">
+                <input class="input-field" type="cognome" name="cognome" placeholder="Cognome" required>
             </div>
         
         
             <div class="div-input-field">
-                <input class="input-field" type="username" name="username" placeholder="Username">
+                <input class="input-field" type="username" name="username" placeholder="Username" required>
             </div>
 
             <div class="div-input-field">
@@ -32,37 +32,41 @@
             </div>
 
             <div class="div-input-field">
-                <input class="input-field" type="password" name="passw" placeholder="Password">
+                <input class="input-field" type="password" name="passw" placeholder="Password" required>
             </div>
 
             <div class="div-input-field">
-                <input class="input-field" type="password" name="confirm_passw" placeholder="Confirm password">
+                <input class="input-field" type="password" name="confirm_passw" placeholder="Confirm password"required>
 
             </div>
 
             <div class="div-input-field">
-                <input class="input-field" type="cofice_fiscale" name="codice_fiscale" placeholder="Codice fiscale">
+                <input class="input-field" type="cofice_fiscale" name="codice_fiscale" placeholder="Codice fiscale" required>
             </div>
 
             <div class="div-input-field">
-                <input class="input-field" type="indirizzo" name="indirizzo" placeholder="Via Paolo Rossi, 24">
+                <input class="input-field" type="indirizzo" name="indirizzo" placeholder="Via Paolo Rossi, 24" required>
             </div>
 
             <div class="div-input-field">
-                <input class="input-field" type="città" name="città" placeholder="Città">
+                <input class="input-field" type="città" name="città" placeholder="Città" required>
             </div>
 
             <div class="div-input-field">
-                <input class="input-field" type="telefono" name="telefono" placeholder="Telefono">
+                <input class="input-field" type="telefono" name="telefono" placeholder="Telefono" required>
             </div>
 
             <div class="div-input-field">
-                <input class="input-field" type="date" name="data_nascita" placeholder="dd/mm/yyyy"> 
+                <input class="input-field" type="date" name="data_nascita" placeholder="dd/mm/yyyy" required> 
+            </div>
+
+            <div class="div-input-field">
+                <input class="input-field" type="città_nascita" name="città_nascita" placeholder="Città di nascita" required> 
             </div>
 
             <div class="div-sex">
-                <input type="radio" name="sesso" value="maschio"> <span id="sex-text">Maschio</span>
-                <input type="radio" name="sesso" value="femmina"> <span id="sex-text">Femmina</span>
+                <input type="radio" name="sesso" value="M"> <span id="sex-text">Maschio</span>
+                <input type="radio" name="sesso" value="F"> <span id="sex-text">Femmina</span>
             </div>
 
             {% if alert %}
@@ -74,6 +78,8 @@
 
             <div class="div-have-account">Hai già un account? <a href="/login" id="have-account-text">Clicca qui</a></div>
 
+
+            
 
             
         </form>
