Sistema per il codice fiscale durante la registrazione completato

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -41,7 +41,7 @@
             </div>
 
             <div class="div-input-field">
-                <input class="input-field" type="cofice_fiscale" name="codice_fiscale" placeholder="Codice fiscale" required>
+                <input class="input-field" type="codice_fiscale" name="codice_fiscale" placeholder="Codice fiscale" required>
             </div>
 
             <div class="div-input-field">
