--- a/templates/home.html
+++ b/templates/home.html
@@ -9,11 +9,15 @@
 </head>
 <body>
     
-    <div class="home-page">
-        <div>
-            
+    
+        <div class="div-saldo-container">
+            <div class="div-saldo-count">
+                <span class="saldo-count">
+                    1.000,00$
+                </span>
+            </div>
         </div>
-    </div>    
+        
 
 </body>
 </html>
