--- a/static/signup.css
+++ b/static/signup.css
@@ -6,22 +6,49 @@ html{
 body{
 	height: 100%;
 	margin: 0;
-	background-image: url('image/background1.jpg');
-	background-size: cover;
+	background: rgb(30,30,34);
+	background: linear-gradient(90deg, rgba(30,30,34,1) 0%, rgba(28,15,1,1) 100%);	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center center;
+	font-family: 'Raleway', sans-serif;
+}
+
+
+.page{
+	position: fixed;
+	width: 100%;
+	height: -webkit-fill-available;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+
+.nav-bar{
+	width: 100%;
+	height: 40px;
+	background-color:  rgba(36, 36, 39, 0.6);
+	display: flex;
+	align-items: center;
+}
+
+.nav-title{
+	margin-left: 8px;
+	color: white;
 }
 
 
 .signup-page{
-	width: 40%;
+	width: 670px;
 	min-width: 300px;
-	height: 100%;
-	margin-left: auto;
+	height: 500px;
+	
 	backdrop-filter: blur(7px);
-	background-color: rgba(20, 20, 20, 0.5);
+	background-color: rgba(36,36,39,0.6);
 	display: flex;
 	justify-content: center;
+	align-items: center;
+	border-radius: 8px;
 }
 
 .signup-form{
@@ -41,6 +68,18 @@ body{
 	color: white;
 	font-size: larger;
 	margin-bottom: 35px;
+
+
+}
+
+.columns{
+	display: flex;
+	flex-direction: row;
+}
+
+.column{
+	width: fit-content;
+	margin: 5px;	
 }
 
 
@@ -48,8 +87,6 @@ body{
 	margin-bottom: 15px;
 	text-align: center;
 	border-radius: 5px;
-	margin-left: 20%;
-	margin-right: 20%;
 
 }
 	
@@ -59,6 +96,12 @@ body{
 	border-width: 0px;
 	height: 20px;
 	width: 240px;
+	padding: 5px;
+    background: rgb(0,0,0,0.5);
+    color: white;
+    outline: none;
+    text-decoration: none;
+	font-family: 'Raleway', sans-serif;
 }
 
 .input-field:hover{
@@ -77,12 +120,17 @@ body{
 
 .div-sex{
 	width: 240px;
-	align-items: flex-start;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin-bottom: 15px;
+	margin-top: 15px;
 }
 
 #sex-text{
 	color: white;
 	font-size: small;
+	
 }
 
 
@@ -93,7 +141,7 @@ body{
 }
 
 #have-account-text{
-	color: blue;
+	color: wheat;
 }
 
 
@@ -104,16 +152,18 @@ body{
 }
 
 .button-signup{
-	background-color: green;
+	background-color:rgb(0,255,0,0.4);
+	box-shadow: 0 0 1px black;
 	color: white;
 	opacity: 0.8;
 	border-width: 0px;
 	border-radius: 3px;
-
+	font-size: small;
+	font-family: 'Raleway', sans-serif;
 }
 
 .button-signup:hover{
 	opacity: 1;
-	box-shadow: 0 0 5 #90EE90; 
+	box-shadow: 0 0 2px #90EE90; 
 	border-color: lightgreen;
 }
