--- a/static/login.css
+++ b/static/login.css
@@ -7,7 +7,7 @@ body{
 	height: 100%;
 	margin: 0;
 	background: rgb(30,30,34);
-	background: linear-gradient(90deg, rgba(30,30,34,1) 0%, rgba(28,15,1,1) 100%);	background-size: cover;
+	background: linear-gradient(90deg, rgba(30,30,34,1) 0%, rgba(31,11,0,1) 100%);	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center center;
 	font-family: 'Raleway', sans-serif;
@@ -16,7 +16,7 @@ body{
 .page{
 	position: fixed;
 	width: 100%;
-	height: -webkit-fill-available;
+	height: 100%;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -57,7 +57,7 @@ body{
     align-items: center;
     align-content: center;
     margin-left: 15%;
-    margin-right: 15%;		
+    margin-right: 15%;
 }
 
 .login-text{
@@ -75,7 +75,7 @@ body{
 	margin-right: 20%;
 
 }
-	
+
 
 .input-field{
 	border-radius: 4px;
@@ -96,11 +96,11 @@ body{
 }
 
 
-	
-	
+
+
 .div-no-account{
-	padding-top: 20px; 
-	text-align: center;	
+	padding-top: 20px;
+	text-align: center;
 	font-size: small;
 	color: white;
 }
@@ -114,13 +114,13 @@ body{
 	text-align: center;
 	align-items: center;
 	padding-top: 10px;
-	
+
 }
 
 
 .button-login{
-	background-color:rgb(0,255,0,0.4);
-	box-shadow: 0 0 2px black;
+	background-color:rgb(124,42,0,0.6);
+	box-shadow: 0 0 1px black;
 	color: white;
 	opacity: 0.8;
 	border-width: 0px;
@@ -132,8 +132,8 @@ body{
 
 .button-login:hover{
 	opacity: 1;
-	box-shadow: 0 0 1px #90EE90; 
-	border-color: lightgreen;
+	box-shadow: 0 0 1px orange;
+	border-color: orange;
 }
 
 #alert{
