--- a/static/signup.css
+++ b/static/signup.css
@@ -7,7 +7,7 @@ body{
 	height: 100%;
 	margin: 0;
 	background: rgb(30,30,34);
-	background: linear-gradient(90deg, rgba(30,30,34,1) 0%, rgba(28,15,1,1) 100%);	background-size: cover;
+	background: linear-gradient(90deg, rgba(30,30,34,1) 0%, rgba(31,11,0,1) 100%);	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center center;
 	font-family: 'Raleway', sans-serif;
@@ -17,7 +17,7 @@ body{
 .page{
 	position: fixed;
 	width: 100%;
-	height: -webkit-fill-available;
+	height: 100%;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -42,7 +42,7 @@ body{
 	width: 670px;
 	min-width: 300px;
 	height: 500px;
-	
+
 	backdrop-filter: blur(7px);
 	background-color: rgba(36,36,39,0.6);
 	display: flex;
@@ -61,7 +61,7 @@ body{
     flex-direction: column;
     align-items: center;
     align-content: center;
-    		
+
 }
 
 .signup-text{
@@ -79,7 +79,7 @@ body{
 
 .column{
 	width: fit-content;
-	margin: 5px;	
+	margin: 5px;
 }
 
 
@@ -89,7 +89,7 @@ body{
 	border-radius: 5px;
 
 }
-	
+
 
 .input-field{
 	border-radius: 4px;
@@ -108,11 +108,11 @@ body{
     border-color: cornflowerblue;
     box-shadow: 0 0 5px cornflowerblue;
 }
-	
-	
+
+
 .div-have-account{
-	padding-top: 20px; 
-	text-align: center;	
+	padding-top: 20px;
+	text-align: center;
 	font-size: small;
 	color: white;
 }
@@ -130,7 +130,7 @@ body{
 #sex-text{
 	color: white;
 	font-size: small;
-	
+
 }
 
 
@@ -152,7 +152,7 @@ body{
 }
 
 .button-signup{
-	background-color:rgb(0,255,0,0.4);
+	background-color:rgb(124,42,0,0.6);
 	box-shadow: 0 0 1px black;
 	color: white;
 	opacity: 0.8;
@@ -164,6 +164,6 @@ body{
 
 .button-signup:hover{
 	opacity: 1;
-	box-shadow: 0 0 2px #90EE90; 
-	border-color: lightgreen;
+	box-shadow: 0 0 1px orange;
+	border-color: orange;
 }
