--- a/static/signup.css
+++ b/static/signup.css
@@ -160,6 +160,7 @@ body{
 	border-radius: 3px;
 	font-size: small;
 	font-family: 'Raleway', sans-serif;
+	padding: 6px;
 }
 
 .button-signup:hover{
