--- a/templates/home.html
+++ b/templates/home.html
@@ -27,16 +27,19 @@
         </div>
         <div class="filler-space">
         </div>
-    
+
         {% for transazione in transazioni %}
-        
+
         <div class="div-transaction">
-            <span class="name-transaction">transazione.descrizione</span>
+            <div class="div-name-date">
+                <span class="name-transaction">{{ transazione.descrizione }}</span>
+                
+                <span class="date-transaction">{{ transazione.data}}</span>
+            </div>
             {% if transazione.importo > 0 %}
-            
-            <span class="value-transaction" style="color: lime;" >{{ transazione.importo }}$</span>
+            <span class="value-transaction" style="color: lime;">{{ transazione.importo }}$</span>
             {% elif transazione.importo < 0 %}
-            <span class="value-transaction" style="color: red;">{{  transazione.importo }}$</span>
+            <span class="value-transaction" style="color: red;">{{ transazione.importo }}$</span>
             {% endif %}
         </div>
         {% endfor %}
