--- a/templates/login.html
+++ b/templates/login.html
@@ -25,11 +25,11 @@
                 <span class="login-text"> Log In</span>
 
                 <div class="div-input-field">
-                    <input class="input-field" type="username" name="username" placeholder="Username">
+                    <input class="input-field" type="username" name="username" placeholder="Username" required>
                 </div>
 
                 <div class="div-input-field">
-                    <input class="input-field" type="password" name="passw" placeholder="Password">
+                    <input class="input-field" type="password" name="passw" placeholder="Password" required>
 
 
                 </div>
