--- a/templates/home.html
+++ b/templates/home.html
@@ -37,7 +37,7 @@
                 <span class="date-transaction">{{ transazione.data}}</span>
             </div>
             {% if transazione.importo > 0 %}
-            <span class="value-transaction" style="color: lime;">{{ transazione.importo }}$</span>
+            <span class="value-transaction" style="color: lime;">+{{ transazione.importo }}$</span>
             {% elif transazione.importo < 0 %}
             <span class="value-transaction" style="color: red;">{{ transazione.importo }}$</span>
             {% endif %}
