--- a/templates/home.html
+++ b/templates/home.html
@@ -15,7 +15,12 @@
 <body>
 
     <nav class="nav-bar">
-        <span class="nav-title">Home Banking</span>
+        <a href="/home">
+            <span class="nav-title">
+                HomeBanking
+            </span>
+        </a>
+        <a id="link-bonifico" href="/bonifico">Bonifico</a>
     </nav>
     <div class="page">
         <div class="div-saldo-container">
@@ -25,10 +30,11 @@
                     {{ saldo.saldo_disponibile }}$
                 </span>
 
-                <span id="text-saldo-cont"> Saldo contabile: <span class="saldo-cont"> {{ saldo.saldo_contabile }}$</span></span>
+                <span id="text-saldo-cont"> Saldo contabile: <span class="saldo-cont"> {{ saldo.saldo_contabile
+                        }}$</span></span>
             </div>
         </div>
-        
+
         <div class="filler-space">
 
         </div>
@@ -37,15 +43,15 @@
 
         <div class="div-transaction">
             <div class="div-name-date">
-                <span class="name-transaction">{{ transazione.titolo }}</span>
-                
+                <span class="name-transaction">{{ transazione.user2 }}</span>
+
                 <span class="date-transaction">{{ transazione.data}}</span>
             </div>
             {% if transazione.importo > 0 %}
             <span class="value-transaction" style="color: lime;">+{{ transazione.importo }}$</span>
-            {% elif transazione.importo < 0 %}
-            <span class="value-transaction" style="color: red;">{{ transazione.importo }}$</span>
-            {% endif %}
+            {% elif transazione.importo < 0 %} <span class="value-transaction" style="color: red;">{{
+                transazione.importo }}$</span>
+                {% endif %}
         </div>
         {% endfor %}
     </div>
