--- a/templates/home.html
+++ b/templates/home.html
@@ -15,12 +15,17 @@
 <body>
 
     <nav class="nav-bar">
-        <a href="/home">
+        <a id="link-home" href="/home">
             <span class="nav-title">
                 HomeBanking
             </span>
         </a>
-        <a id="link-bonifico" href="/bonifico">Bonifico</a>
+        <a id="link-bonifico" href="/bonifico">
+            <span id="span-bonifico">
+                Bonifico Istantaneo
+            </span>
+        </a>
+
     </nav>
     <div class="page">
         <div class="div-saldo-container">
