--- a/static/admin.css
+++ b/static/admin.css
@@ -1,5 +1,4 @@
 html{
-
 	min-height: 590px;
 }
 
@@ -18,13 +17,12 @@ body{
 .page{
 	width: 100%;
 	height: 100%;
+	min-width: 880px;
 	display: flex;
 	align-items: center;
 	flex-direction: column;
 
 }
-
-
 
 .nav-bar{
 	width: 100%;
@@ -39,17 +37,58 @@ body{
 	color: white;
 }
 
-#link-home{
+#link-admin{
 	text-decoration: none;
 }
 
-#link-bonifico{
+#span-users{
+	color: white;
+    width: auto;
+    margin-top: 50px;
+    font-size: xx-large;
+}
+
+
+
+.users{
+	margin-top: 20px;
+	background-color: rgba(36, 36, 39, 0.6);
+	box-shadow: 3px 3px 8px rgb(0,0,0, 0.3);	height: 40px;
+	width: 70%;
+	border-radius: 8px;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+}	
+
+#span-username{
+	margin-left: 10px;
+	color: white;
+	font-weight: bolder;
+}
+
+#span-saldo-disponibile{
+	margin-left: 10px;
+	color: white;	
+}
+
+.div-buttons{
 	margin-left: auto;
-    margin-right: 15px;
-	text-decoration: none;
+}
+
+#btn-actions{
+	border-width: 0px;
+	height: 20px;
+	width: auto;
+	font-size: smaller;
+	background-color: rgba(65, 65, 65, 0.6);
+	box-shadow: 3px 3px 8px rgb(0,0,0, 0.3);
+	border-radius: 4px;
+	margin-right: 10px;
 	color: white;
 }
 
-#span-bonifico{
-	color: white;
+#btn-actions:hover{
+	border-color: cornflowerblue;
+    box-shadow: 0 0 5px cornflowerblue;
 }
