--- a/templates/home.html
+++ b/templates/home.html
@@ -26,8 +26,16 @@
             </span>
         </a>
 
+        <a id="link-logout" href="/logout">
+            <span id="span-logout">
+                Logout
+            </span>
+        </a>
+
     </nav>
     <div class="page">
+        <span id="username"> {{ username }} </span>
+
         <div class="div-saldo-container">
             <div class="div-saldo-count">
                 <span id="text-saldo-disp"> Saldo disponibile:</span>
