--- a/templates/home.html
+++ b/templates/home.html
@@ -40,11 +40,11 @@
             <div class="div-saldo-count">
                 <span id="text-saldo-disp"> Saldo disponibile:</span>
                 <span class="saldo-disp">
-                    {{ saldo.saldo_disponibile }}$
+                    {{ saldo.saldo_disponibile }}€
                 </span>
 
                 <span id="text-saldo-cont"> Saldo contabile: <span class="saldo-cont"> {{ saldo.saldo_contabile
-                        }}$</span></span>
+                        }}€</span></span>
             </div>
         </div>
 
@@ -69,6 +69,7 @@
         {% endfor %}
     </div>
 
+    <!--<script src="static/home.js"></script>--> 
 
 </body>
 
