--- a/static/bonifico.css
+++ b/static/bonifico.css
@@ -7,7 +7,7 @@ body{
 	height: 100%;
 	margin: 0;
 	background: rgb(30,30,34);
-	background: linear-gradient(90deg, rgba(30,30,34,1) 0%, rgba(31,11,0,1) 100%);	background-size: cover;
+	background: linear-gradient(90deg, rgba(14,14,15,1) 0%, rgba(31,11,0,1) 100%);	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center center;
 	font-family: 'Raleway', sans-serif;
@@ -23,10 +23,10 @@ body{
 }
 
 .bonifico-page{
-	width: 400px;
-	min-width: 400px;
-	height: 385px;
-	background-color: rgba(36, 36, 39, 0.6);
+	width: 380px;
+	min-width: 350px;
+	height: 415px;
+	background-color: rgba(36, 36, 39, 0.4);
 	border-radius: 8px;
 	display: flex;
 	justify-content: center;
@@ -40,7 +40,11 @@ body{
 	align-items: center;
 }
 
-.nav-title{
+#nav-link{
+	text-decoration: none;
+}
+
+#nav-title{
 	margin-left: 8px;
 	color: white;
 }
@@ -60,10 +64,11 @@ body{
     margin-right: 15%;
 }
 
-.bonifico-text{
+#bonifico-text{
 	color: white;
 	font-size: larger;
-	margin-bottom: 35px;
+	margin-top: 15px;
+	margin-bottom: 20px;
 }
 
 
@@ -80,7 +85,7 @@ body{
 .input-field{
 	border-radius: 4px;
 	border-width: 0px;
-	height: 20px;
+	height: 25px;
 	width: 240px;
 	padding: 5px;
     background: rgb(0,0,0,0.5);
@@ -93,6 +98,14 @@ body{
 .input-field:hover{
     border-color: cornflowerblue;
     box-shadow: 0 0 5px cornflowerblue;
+}
+
+#message{
+	text-align: initial;
+	font-size: x-small;
+	color: rgb(100,100,100,1);
+	width: 240px;
+	margin-bottom: 10px;
 }
 
 .causale-input-field{
@@ -135,7 +148,6 @@ body{
 
 .button-bonifico:hover{
 	opacity: 1;
-	box-shadow: 0 0 1px wheat;
 }
 
 #alert{
