--- a/static/home.css
+++ b/static/home.css
@@ -8,7 +8,7 @@ body{
 	margin: 0;
 	min-width: 280px;
 	background: rgb(30,30,34);
-	background: linear-gradient(90deg, rgba(30,30,34,1) 0%, rgba(31,11,0,1) 100%);	background-size: cover;
+	background: linear-gradient(90deg, rgb(14, 14, 15) 0%, rgba(31,11,0,1) 100%);	background-size: cover;
 	display: flex;
 	justify-content: center;
 	font-family: 'Raleway', sans-serif;
@@ -29,7 +29,7 @@ body{
 .nav-bar{
 	width: 100%;
 	height: 40px;
-	background-color:  rgba(36, 36, 39, 0.6);
+	background-color:  rgba(36, 36, 39, 0.4);
 	display: flex;
 	align-items: center;
 }
@@ -154,6 +154,16 @@ body{
 	border-color: cornflowerblue;
     box-shadow: 0 0 5px cornflowerblue;
 }
+
+/*
+.content {
+	padding: 0 18px;
+	background-color: white;
+	max-height: 0;
+	overflow: hidden;
+	transition: max-height 0.2s ease-out;
+}
+*/
 
 .div-name-date{
 	margin-left: 20px;	
